--- a/alacritty.yml
+++ b/alacritty.yml
@@ -12,16 +12,16 @@ scrolling:
   multiplier: 3
 font:
   normal:
-    family: Fira Code
+    family: FiraCode Nerd Font Mono
     style: Regular
   bold:
-    family: Fira Code
+    family: FiraCode Nerd Font Mono
     style: Bold
   italic:
-    family: Fira Code
+    family: FiraCode Nerd Font Mono
     style: Italic
   bold_italic:
-    family: Fira Code
+    family: FiraCode Nerd Font Mono
     style: Bold Italic
   size: 14.0
   use_thin_strokes: true
@@ -100,8 +100,8 @@ colors: *dark
 bell:
   animation: EaseOutExpo
   duration: 300
-  color: '0xffffff'
-background_opacity: 0.99
+  color: '0xbada55'
+background_opacity: 0.90
 selection:
   # This string contains all characters that are used as separators for
   # "semantic words" in Alacritty.
@@ -117,15 +117,31 @@ cursor:
 live_config_reload: true
 # Tell Alacritty that we’re using fish here
 #shell:
-# program: /usr/local/bin/fish
-# args:
-#   - --login
+#program: /bin/zsh
+#args:
+#- --login
 # Enable clickable URLs
-mouse:
-  url:
-    launcher:
-      program: open
-    modifiers: Command
+# mouse:
+#   hints:
+#     launcher:
+#       program: open
+#     modifiers: Command
+working_directory: /Users/alexgr
+hints:
+  enabled:
+    - regex: "(mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
+      [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+      command: open
+      mouse:
+        enabled: true
+        mods: None
+    - regex: '([a-zA-Z0-9-_./])+\.(t|j)s(x)?(:\d+:\d+)?'
+      command:
+        program: "/usr/local/bin/nvr"
+      post_processing: false
+      mouse:
+        enabled: true
+        mods: None
 # Map the keys (British keyboard layout)
 #key_bindings:
 # - { key: Key0, mods: Alt, chars: 'º' }
