--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,4 +1,5 @@
 window:
+  opacity: 0.94
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
@@ -18,7 +19,7 @@ font:
     family: FiraCode Nerd Font Mono
     style: Bold
   italic:
-    family: FiraCode Nerd Font Mono
+    family: Go Mono for Powerline
     style: Italic
   bold_italic:
     family: FiraCode Nerd Font Mono
@@ -28,80 +29,109 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 schemes:
-  solarized_light: &light
+  solarized_light:
     # Default colors
+    &light
     primary:
       background: '#fdf6e3' # base3
       foreground: '#657b83' # base00
 
     # Cursor colors
     cursor:
-      text:   '#fdf6e3' # base3
+      text: '#fdf6e3' # base3
       cursor: '#657b83' # base00
 
     # Normal colors
     normal:
-      black:   '#073642' # base02
-      red:     '#dc322f' # red
-      green:   '#859900' # green
-      yellow:  '#b58900' # yellow
-      blue:    '#268bd2' # blue
+      black: '#073642' # base02
+      red: '#dc322f' # red
+      green: '#859900' # green
+      yellow: '#b58900' # yellow
+      blue: '#268bd2' # blue
       magenta: '#d33682' # magenta
-      cyan:    '#2aa198' # cyan
-      white:   '#eee8d5' # base2
+      cyan: '#2aa198' # cyan
+      white: '#eee8d5' # base2
 
     # Bright colors
     bright:
-      black:   '#002b36' # base03
-      red:     '#cb4b16' # orange
-      green:   '#586e75' # base01
-      yellow:  '#657b83' # base00
-      blue:    '#839496' # base0
+      black: '#002b36' # base03
+      red: '#cb4b16' # orange
+      green: '#586e75' # base01
+      yellow: '#657b83' # base00
+      blue: '#839496' # base0
       magenta: '#6c71c4' # violet
-      cyan:    '#93a1a1' # base1
-      white:   '#fdf6e3' # base3
+      cyan: '#93a1a1' # base1
+      white: '#fdf6e3' # base3
 
-  solarized_dark: &dark
+  solarized_dark:
     # Default colors
+    &dark
     primary:
       background: '#002b36' # base03
       foreground: '#839496' # base0
 
     # Cursor colors
     cursor:
-      text:   '#002b36' # base03
+      text: '#002b36' # base03
       cursor: '#839496' # base0
 
     # Normal colors
     normal:
-      black:   '#073642' # base02
-      red:     '#dc322f' # red
-      green:   '#859900' # green
-      yellow:  '#b58900' # yellow
-      blue:    '#268bd2' # blue
+      black: '#073642' # base02
+      red: '#dc322f' # red
+      green: '#859900' # green
+      yellow: '#b58900' # yellow
+      blue: '#268bd2' # blue
       magenta: '#d33682' # magenta
-      cyan:    '#2aa198' # cyan
-      white:   '#eee8d5' # base2
+      cyan: '#2aa198' # cyan
+      white: '#eee8d5' # base2
 
     # Bright colors
     bright:
-      black:   '#002b36' # base03
-      red:     '#cb4b16' # orange
-      green:   '#586e75' # base01
-      yellow:  '#657b83' # base00
-      blue:    '#839496' # base0
+      black: '#002b36' # base03
+      red: '#cb4b16' # orange
+      green: '#586e75' # base01
+      yellow: '#657b83' # base00
+      blue: '#839496' # base0
       magenta: '#6c71c4' # violet
-      cyan:    '#93a1a1' # base1
-      white:   '#fdf6e3' # base3
+      cyan: '#93a1a1' # base1
+      white: '#fdf6e3' # base3
 
-colors: *dark
+colors:
+  # Default colors
+  primary:
+    # hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
+
+  # Normal colors
+  normal:
+    black: '#282828'
+    red: '#cc241d'
+    green: '#98971a'
+    yellow: '#d79921'
+    blue: '#458588'
+    magenta: '#b16286'
+    cyan: '#689d6a'
+    white: '#a89984'
+
+  # Bright colors
+  bright:
+    black: '#928374'
+    red: '#fb4934'
+    green: '#b8bb26'
+    yellow: '#fabd2f'
+    blue: '#83a598'
+    magenta: '#d3869b'
+    cyan: '#8ec07c'
+    white: '#ebdbb2'
 
 # Specifying a `duration` of `0` will disable the visual bell.
 bell:
   animation: EaseOutExpo
   duration: 300
   color: '0xbada55'
-background_opacity: 0.90
 selection:
   # This string contains all characters that are used as separators for
   # "semantic words" in Alacritty.
@@ -129,8 +159,8 @@ live_config_reload: true
 working_directory: /Users/alexgr
 hints:
   enabled:
-    - regex: "(mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)\
-      [^\u0000-\u001F\u007F-\u009F<>\"\\s{-}\\^⟨⟩`]+"
+    - regex: "(mailto:|gemini:|gopher:|https:|http:|news:|file:|git:|ssh:|ftp:)[^\0-\
+        \x1f-<>\"\\s{-}\\^⟨⟩`]+"
       command: open
       mouse:
         enabled: true
@@ -142,9 +172,9 @@ hints:
       mouse:
         enabled: true
         mods: None
-# Map the keys (British keyboard layout)
-#key_bindings:
-# - { key: Key0, mods: Alt, chars: 'º' }
+  # Map the keys (British keyboard layout)
+  #key_bindings:
+  # - { key: Key0, mods: Alt, chars: 'º' }
   # - { key: Key1, mods: Alt, chars: '¡' }
   # - { key: Key2, mods: Alt, chars: '€' }
   # - { key: Key3, mods: Alt, chars: '#' }
@@ -154,3 +184,4 @@ hints:
   # - { key: Key7, mods: Alt, chars: '¶' }
   # - { key: Key8, mods: Alt, chars: '•' }
   # - { key: Key9, mods: Alt, chars: 'ª' }
+theme: Gruvbox-Dark
